# Acoustic-Projection-Microphone-System

./: .gitignore  ANNOUNCEMENT.md  BUILD.md  BUILD_V2.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  ENCRYPTION.md  LICENSE  PTT_&_Call_Signaling.md  README.md  ROADMAP.md  SYSTEM_MANIFEST.md  TESTING_AND_VALIDATION.md  TRANSLATION_BRIDGE.md  USER_PACKAGE_README.md  apm-config-gui.py  apm-dashboard.html  apm_dev_console.cpp  apm_peer_integration.py  fft_processor.h  local_translation_engine.cpp  main.cpp  render.yaml  requirements-translation.txt  setup.sh  signaling.py  test_translation_integration.cpp  tflite_translation_engine.h  usePeerDiscovery.js
.github/workflows/: ci.yml  docker.yml
_codeql_build_dir/: CTestTestfile.cmake  DartConfiguration.tcl  apm_test
backend/: README.md  app.py  main.py  storage.py  telemetry.py  test_api.py  test_storage.py
backend/control/: apm_control_panel.py
backend/peer/: apm_peer_integration.py  apm_peer_service.py
backend/signaling/: __init__.py  signaling.py  ws_signaling.py
cmake/: APMConfig.cmake.in
config/: requirements-translation.txt
docker/: Dockerfile
docs/: RELEASE_NOTES_V6.md  REST_API_IMPLEMENTATION.md  ROADMAP.md  architecture.md  architecture_overview.md  design_decisions.md  extension_points.md  operational_considerations.md  signaling_contract.md
docs/deployment/: INCREMENTAL_DEPLOYMENT.md
docs/migration/: MIGRATION_V1_TO_V2.md
docs/signaling/: SIGNALING_CONTRACT.md
docs/translation/: TRANSLATION_BRIDGE.md  TRANSLATION_QUICKSTART.md
docs/user/: INSTALL_USER.md
examples/: basic_example.cpp  encrypted_translation_example.cpp  remote_api_client.py  translation_example.cpp
frontend/adapters/: apmBackendAdapter.js  wsSignalingClient.js
frontend/adapters/frontend/adapters/: wsSignalingClient.js
frontend/hooks/: usePeerDiscovery.js
frontend/ui/: APMDashboard.jsx
include/apm/: apm_core.hpp  apm_system.h  call_signaling.hpp  config.h.in  crypto.hpp  local_translation_engine.hpp  ptt_controller.hpp  wav_io.hpp
include/apm/comms/: call_signaling.hpp  ptt_controller.hpp
include/apm/internal/: apm_extension.hpp  apm_observability.hpp  fft_processor.h
include/apm/io/: audio_device.h
include/apm/translation/: local_translation_adapter.h  local_translation_engine.hpp
installers/: setup.iss
launcher/: apm_launcher.js  package-lock.json  package.json
scripts/: healthcheck.js  setup.sh  start-api.bat  start-api.sh  start-apm.bat  start-apm.sh  translation_bridge.py  user-setup.sh
src/: apm_core.cpp  call_signaling.cpp  crypto.cpp  local_translation_engine.cpp  ptt_controller.cpp
src/core/: apm_core.cpp  apm_system.cpp  main.cpp
src/examples/: ptt_call_example.cpp
src/io/: audio_device.cpp  wav_io.cpp
src/tools/: apm_dev_console.cpp  runtime_metrics.cpp
src/translation/: local_translation_adapter.cpp  local_translation_engine.cpp  local_translation_engine.hpp
tests/: integration.test.js  test_apm_core.cpp  test_apm_features.cpp  test_crypto.cpp  test_main.cpp
tests/integration/: integration.test.js  test_translation_integration.cpp
tools/: apm-config-gui.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: APMDashboard.jsx  main.jsx  styles.css
